Quick update/added of the queue length column -- completely forgot about it/so focus on the other two ascpets; yeah, misaligned naturally due to word length; very minor issue due to simple layout. Perhaps fix it and the solve the longer service issue later down the line.

--- a/AdminUI/CSS/AdminDash.css
+++ b/AdminUI/CSS/AdminDash.css
@@ -57,6 +57,13 @@
     text-align: left;
 }
 
+@media (max-width: 610px) 
+{
+  .SLB-Title {  font-size: 1rem;  }
+
+  .scroll-list-box button {  font-size: 0.75rem;  }
+}
+
 /* Status Selection Section */
 
 .SCB-Title
